<resources>
    <string name="quiet">Quiet</string>
    <string name="ignore">Ignore</string>
    <string name="answer">Answer</string>
    <string name="accept_puzzle">Accept</string>
    <string name="call">Call</string>
    <string name="end_screen_text">End Call</string>
    <string name="not_valid_number">"Not a valid number
Message cannot be sent"</string>
    <string name="not_valid_number_call">"Not a valid number
Call cannot be sent"</string>
    <string name="not_valid_number_message">"Not a valid number
Message cannot be sent"</string>
    <string name="callsettings_sfk_save">Save</string>
    <string name="callsettings_sfk_cancel">Cancel</string>
    <string name="callsettings_body_already_in_use">already in use</string>
    <string name="callsettings_sfk_create">Create</string>
    <string name="callsettings_sfk_help">Help</string>
    <string name="callsettings_sfk_delete">Delete</string>
    <string name="callsettings_rejectcallwithmsg_help">You can send explanatory text message to callers when you ignore their calls</string>
    <string name="callsettings_allcalls_noitem">No item</string>
    <string name="callsettings_allcalls_selectall">Select all</string>
    <string name="callsettings_body_reject_msg_empty">Ignore message is empty</string>
    <string name="callsettings_rejectmsg_dialog_title">Ignore message</string>
    <string name="ignore_with_msg_title">Ignore with message</string>
    <string name="callsettings_body_delete">Deleted</string>
    <string name="callsettings_body_nothing_selected">Nothing selected</string>
    <string name="own_number_text">My number:</string>
    <string name="phone_info_text">Phone info</string>
    <string name="info_screen_phone_number">Unknown</string>
    <string name="info_screen_phone_number_text">Phone number:</string>
    <string name="info_screen_user_data">User:</string>
    <string name="info_screen_pda_model">Model:</string>
    <string name="info_screen_phone_model">S:</string>
    <string name="info_screen_hw_rev">H:</string>
    <string name="info_screen_prl_version">P:</string>
    <string name="info_screen_library_info">Library info:</string>
    <string name="info_screen_browser_name">Browser Name:</string>
    <string name="info_screen_browser_version">Browser Version:</string>
    <string name="phone_info_exit">Exit</string>
    <string name="customer_service">Customer service</string>
    <string name="account_info">Account Info</string>
    <string name="ecbm_mode_active_text">Emergency Callback Mode is active</string>
    <string name="ecbm_mode_text">Emergency Callback</string>
    <string name="ecbm_exit_text">Exit</string>
    <string name="ecbm_ok_text">Dialer</string>
    <string name="ecbm_call_text">Call</string>
    <string name="ecbm_emergency_number">Dial 911</string>
    <string name="ecbm_instruction_text">"Press the \"Call\" button
for emergency call. 
Press \"Exit\" button to exit the
Emergency Call Back mode."</string>
    <string name="slide_to_ok_hint">Ok</string>
    <string name="slide_to_exit_hint">Exit</string>
    <string name="dial_up_network">Dial Up Networking</string>
    <string name="dun_enable">Connect to data services using dial up network</string>
    <string name="dun_disable">Connect to data services using dial up network</string>
    <string name="dun_allow_warning">Allow dial up network? You can not use other data services (i.e browser, MMS etc). After using dial up network turn off it for using other data services</string>
    <string name="dun_active_notification">Voice calls are not available when using your phone as a modem. Please disconnect and try your call again.</string>
    <string name="sprint_call_guard">Call Guard</string>
    <string name="sprint_call_guard_enable">Extra key press required for roam calls</string>
    <string name="sprint_call_guard_disable">Extra key press not required for roam calls</string>
    <string name="sprint_call_guard_enable_message">Extra key press required for roam calls</string>
    <string name="sprint_call_guard_disable_message">Extra key press not required for roam calls</string>
    <string name="sprint_call_guard_call_message">You are roaming and charges may apply per plan. Press OK to call.</string>
    <string name="sprint_call_guard_answer_message">You are roaming and charges may apply per plan. Press OK to answer.</string>
    <string name="sprint_data_roaming_guard_title">Data Roaming Guard</string>
    <string name="sprint_data_roaming_guard_summary">Change the data roaming guard mode</string>
    <string name="sprint_data_roaming_guard_dialogtitle">Data Roaming Guard</string>
    <string name="sprint_data_roaming_guard_dialog_alwaysask">The Data Roam Guard will appear when you data roam.</string>
    <string name="sprint_data_roaming_guard_dialog_neverask">The Data Roam Guard will not appear when you data roam.</string>
    <string name="sprint_data_roaming_guard_first_time">"To change this setting, go to the phone's setting menu and select [Wireless controls], [Mobile Networks], then select [Data Roaming Guard]"</string>
    <string name="roaming_data_guard_title">Warning!</string>
    <string name="roaming_data_guard_warning">"You are data roaming and
charges may apply per plan.
Press Roam below to continue."</string>
    <string name="roaming_data_guard_never_ask_text">Never ask again</string>
    <string name="roaming_data_guard_screen_roam_button">Roam</string>
    <string name="roaming_data_guard_screen_cancel_button">Cancel</string>
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="video_call">Video call</string>
    <string name="ic_menu_video_call">Switch to video call</string>
    <string name="transfer">Transfer</string>
    <string name="split">Split</string>
    <string name="contacts">Contacts</string>
    <string name="noise_reduction_on">Noise Reduction On</string>
    <string name="noise_reduction_off">Noise Reduction Off</string>
    <string name="record_voice">Record Voice</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="sim_services">SIM Services</string>
    <string name="manage_conference_call">Manage Conference Call</string>
    <string name="incoming_call_from">Incoming call from</string>
    <string name="unknown">Unavailable</string>
    <string name="private_num">Restricted</string>
    <string name="payphone">No Caller ID</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="cancel">Cancel</string>
    <string name="inCallCallButtonText">Call</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile networks</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="gsm_umts_options">GSM/UMTS Options</string>
    <string name="cdma_options">CDMA Options</string>
    <string name="cdma_system_select_title">System selection</string>
    <string name="cdma_system_select_summary">Change the cdma roaming mode</string>
    <string name="cdma_system_select_dialogtitle">System selection</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="voice_privacy">Voice privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="auto_retry_mode_title">Auto retry</string>
    <string name="auto_retry_mode_summary">Automatically reattempt a call when the device receives a network busy signal</string>
    <string name="save">Save</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenHideDialpadText">Hide</string>
    <string name="onscreenSpeakerText">Speaker</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenBluetoothText">Bluetooth</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge</string>
    <string name="onscreenDropLastCallsText">"Drop
last call"</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="ota_title_activate">Activate your phone</string>
    <string name="ota_touch_activate">"A special call needs to be made to activate your phone service. 

After pressing “Activate”, listen to the instructions provided to activate your phone."</string>
    <string name="ota_activate">Activate</string>
    <string name="ota_send_button">Send</string>
    <string name="ota_emergency_button">Emergency</string>
    <string name="ota_speaker">Speaker</string>
    <string name="ota_text_activate">"Press \"Send\"
 to activate your phone"</string>
    <string name="ota_call_end">Back</string>
    <string name="ota_try_again">Try again</string>
    <string name="ota_next">Next</string>
    <string name="ota_back">Back</string>
    <string name="voicemail_settings">Voicemail</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="end_call">End call</string>
    <string name="message">Message</string>
    <string name="update_existing">Update existing</string>
    <string name="zz_country_code_name">International Dialing</string>
    <string name="zz_country_name_toggle_summary">Replaces + with International dialing code except +1</string>
    <string name="zz_country_code_dialing_title">North American dialing</string>
    <string name="zz_country_code_summary">Set international dialing code</string>
    <string name="zz_tty_list_name">TTY</string>
    <string name="zz_tty_value_name">TTY OFF</string>
    <string name="add_2_contacts">Add to Contacts</string>
</resources>