<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/mobile_networks"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceScreen android:persistent="false" android:title="@string/roaming" android:key="button_roaming_key">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.dataroaming.DataRoamingSettingActivity" />
    </PreferenceScreen>
    <ListPreference android:entries="@array/preferred_network_mode_choices" android:title="@string/preferred_network_mode_title" android:key="preferred_network_mode_key" android:summary="@string/preferred_network_mode_summary" android:dialogTitle="@string/preferred_network_mode_dialogtitle" android:entryValues="@array/preferred_network_mode_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/gsm_umts_options" android:key="gsm_umts_options_key">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/cdma_options" android:key="cdma_options_key">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaOptions" />
    </PreferenceScreen>
</PreferenceScreen>
