<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/otaBase" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/ccOtaWizardTitle" android:id="@id/otaTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ota_title_activate" />
            <View android:layout_gravity="center" android:id="@id/otaGreenLine" android:background="@drawable/green_divider" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="14.0dip" />
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/otaPopup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="60.899994dip">
                <TextView android:textSize="36.0px" android:typeface="sans" android:textStyle="italic" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="100.0px" android:layout_marginTop="220.0px" android:text="@string/ota_text_activate" />
            </LinearLayout>
            <TextView android:textAppearance="@style/ccOtaTextPrimary" android:id="@id/otaActivate" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/otaactivate_layout_marginTop" android:text="@string/ota_touch_activate" />
            <TextView android:textAppearance="@style/ccOtaTextPrimary" android:id="@id/otaListenProgress" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/otalistenprogress_layout_marginTop" />
            <ProgressBar android:id="@android:attr/theme" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" style="?android:attr/progressBarStyleHorizontal" />
            <TextView android:textAppearance="@style/ccOtaTextPrimary" android:gravity="left" android:id="@id/otaSuccessFailStatus" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="@dimen/otasuccessfail_layout_marginTop" />
            <EditText android:textSize="25.0dip" android:typeface="sans" android:textColor="#ffffffff" android:gravity="right" android:id="@id/txtOtaCall" android:background="#ff000000" android:visibility="gone" android:layout_width="320.0dip" android:layout_height="26.0dip" android:cursorVisible="false" android:editable="false" />
            <com.android.phone.DTMFTwelveKeyDialerView android:orientation="vertical" android:id="@id/otaDtmfDialer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <include layout="@layout/dialpad" />
            </com.android.phone.DTMFTwelveKeyDialerView>
        </LinearLayout>
    </ScrollView>
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <ToggleButton android:layout_gravity="center" android:id="@id/otaSpeakerButton" android:textOn="@string/ota_speaker" android:textOff="@string/ota_speaker" style="@style/ccOtaButton" />
    <RelativeLayout android:id="@id/callCardOtaActivate" android:visibility="gone" style="@style/ccOtaButtonBar">
        <Button android:id="@id/otaActivateButton" android:text="@string/ota_activate" style="@style/ccOtaNextButton" />
        <Button android:id="@id/otaCancelButton" android:text="@string/ota_back" style="@style/ccOtaBackButton" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/callCardOtaListenProgress" android:visibility="gone" style="@style/ccOtaButtonBar">
        <Button android:id="@id/otaEndButton" android:text="@string/ota_call_end" style="@style/ccOtaBackButton" />
        <Button android:id="@id/otaShowDialpadButton" android:text="@string/onscreenShowDialpadText" style="@style/ccOtaNextButton" />
        <Button android:id="@id/otaHideDialpadButton" android:text="@string/onscreenHideDialpadText" style="@style/ccOtaNextButton" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/callCardOtaFailOrSuccessful" android:visibility="gone" style="@style/ccOtaButtonBar">
        <Button android:id="@id/otaNextButton" android:text="@string/ota_next" style="@style/ccOtaNextButton" />
        <Button android:id="@id/otaTryAgainButton" android:text="@string/ota_try_again" style="@style/ccOtaBackButton" />
    </RelativeLayout>
    <LinearLayout android:id="@id/otaSendButtonBar" android:visibility="gone" style="@style/ccOtaButtonBar">
        <Button android:textSize="21.0sp" android:id="@id/otaEmergencyButton" android:layout_width="@dimen/softkey_2btn_width" android:layout_height="@dimen/softkey_2btn_height" android:layout_marginLeft="@dimen/softkey_pnl_padding_left" android:layout_marginTop="@dimen/softkey_pnl_padding_top" android:text="@string/ota_emergency_button" android:drawableLeft="@drawable/ic_emergency" />
        <Button android:textSize="21.0sp" android:id="@id/otaSendButton" android:layout_width="@dimen/softkey_2btn_width" android:layout_height="@dimen/softkey_2btn_height" android:layout_marginTop="@dimen/softkey_pnl_padding_top" android:layout_marginRight="@dimen/softkey_pnl_padding_right" android:text="@string/ota_send_button" />
    </LinearLayout>
</LinearLayout>
