<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/endCallButtonsLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/endCallButtonsPortrait" android:paddingLeft="5.0dip" android:paddingRight="4.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="horizontal" android:id="@id/saveButtonFrame" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/createContacts" android:layout_marginBottom="16.0dip" android:text="@string/add_2_contacts" style="@style/InCallTouchButtonNoFrame" />
            <FrameLayout android:layout_width="1.0dip" android:layout_height="45.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="16.0dip" android:layout_weight="1.0">
                <Button android:id="@id/updateExisting" android:text="@string/update_existing" style="@style/InCallTouchButton" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/voiceCallButton" android:background="@drawable/green_button" android:layout_marginBottom="16.0dip" android:text="@string/inCallCallButtonText" android:drawableLeft="@drawable/incall_button_voice_call_icon" style="@style/InCallTouchButtonNoFrame" />
            <FrameLayout android:layout_width="1.0dip" android:layout_height="45.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="16.0dip" android:layout_weight="1.0">
                <Button android:id="@id/sendMsgButton" android:text="@string/message" android:drawableLeft="@drawable/incall_button_message_icon" style="@style/InCallTouchButton" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <ViewStub android:id="@id/endCallButtonsLandscapeStub" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:paddingBottom="7.0dip" android:layout="@layout/endcall_buttons_view_land" android:inflatedId="@id/endCallButtonsLandscape" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</RelativeLayout>
